(29/08) Funções de componente

--- a/react-basico/03-babek-jsx.html
+++ b/react-basico/03-babek-jsx.html
@@ -46,10 +46,41 @@
         </div>
       );
 
-      const container = React.createElement("div", {
+      const nomeClasse = "formata";
+      const id = "div3";
+      const conteudo =
+        "DIV criada com JSX+Babel usando interpolação de variaveis";
+
+      // Para exibir o conteúdo de uma variável dentro de um JSX, usamos {}.
+      // Isso se chama INTERPOLAÇÃO.
+      const div3 = (
+        <div id={id} className={nomeClasse}>
+          {" "}
+          {conteudo}{" "}
+        </div>
+      );
+
+      // Criando um objeto de props
+      const propsDiv4 = {
+        id: "div4",
+        className: "formata",
+        children: "DIV criada com JSX+Babel e espalhamento de props",
+      };
+
+      // Em JSX, quando não temos a tag de fechamento, é OBRIGATÓRIO terminar o elemnto com />
+      const div4 = <div {...propsDiv4} />;
+
+      /* const container = React.createElement("div", {
         id: "container",
-        children: [div1, div2],
-      });
+        children: [div1, div2, div3, div4],
+      }); */
+
+      // Container em sintaxe JSX
+      const container = (
+        <div id="container">
+          {div1} {div2} {div3} {div4}
+        </div>
+      );
 
       const root = ReactDOM.createRoot(document.getElementById("root"));
       root.render(container);
