(30/08)props mistas e exercicio 1

--- a/react-basico/06-props-mistos.html
+++ b/react-basico/06-props-mistos.html
@@ -36,7 +36,7 @@
 
     <script type="text/babel">
 
-        // Um mesmo componente pode combinar props personalizadas e genéricas
+        // Um mesmo componente pode combinar props personalizadas e props genéricas
         const Soma = ({ num1, num2, ...props }) =>
             <p className="soma" {...props}>
                 A soma de {num1} com {num2} é {num1 + num2}
