--- a/react-basico/07-exercicio1.html
+++ b/react-basico/07-exercicio1.html
@@ -26,6 +26,28 @@
     <div id="root"></div>
 
     <script type="text/babel">
+        /*
+      EXERCÍCIO DE FIXAÇÃO nº 1
+
+        1) Crie dois estilos CSS, um que coloque o texto em uma cor
+           e outro que coloque o texto em outra cor.
+        2) Declare uma função de componente que receba as seguintes
+           props personalizadas: nome, sobrenome, dia, mes e ano.
+        3) Na função de componente, coloque um fragment e, dentro dele,
+          dois parágrafos: no primeiro, deve ser aplicada a classe que
+          deixa a cor do texto em uma cor e, no outro, a classe que deixa
+          a cor na outra cor.
+        4) No primeiro parágrafo, deve ser exibido o nome completo, composto
+          por nome e sobrenome.
+        5) No segundo parágrafo, deve ser exibida a data de nascimento, 
+          composta pelo dia, pelo mês e pelo ano, separados por /.
+        6) No componente, crie, ainda, uma div. Dentro dela, deve ser exibida
+          a idade que a pessoa terá ao final do ano, calculada por meio de
+          um cálculo simples (2024 menos o ano de nascimento informado).
+        7) Faça os comentários que julgar necessários no código.
+      */
+
+
         // Função de componente que recebe props personalizadas
         const Pessoa = ({ nome, sobrenome, dia, mes, ano }) => {
             // Calcula a idade ao final do ano de 2024
