Resolução do exercício de fixação nº 1

--- a/react-básico/04-funcao-componente.html
+++ b/react-básico/04-funcao-componente.html
@@ -64,7 +64,7 @@
                 <Saudacao msg="Boa tarde" nome="Senhor Valdemar" />
             </>
 
-            const root = ReactDom.creatroot(document.getElementById('root'))
+            const root = ReactDOM.createRoot(document.getElementById('root'))
             root.render(container)
 
     </script>
