--- a/react-basico/11-EXERCICIO2.html
+++ b/react-basico/11-EXERCICIO2.html
@@ -16,18 +16,56 @@
 
   <script type="text/babel">
 
-    /*
-      1) Crie um formulário e coloque nele um input numérico com o label "Valor em reais".
-      2) Coloque outro input numérico com o label "Cotação do dólar".
-      3) Coloque, também, uma div para exibir o resultado da conversão de moeda.
-      4) Crie e coloque hooks useRef nos três elementos criados.
-      5) Escreva uma única função handleChange para interceptar a mundança nos dois inputs
-         e atualizar variáveis quando o respectivo valor mudar.
-      6) Usando as variáveis que foram atualizadas em handleChange, exiba na div de resultado
-         o valor convertido.
-      
-      Este exercício contará para a nota de Participação e Assiduidade (PA).
-    */
+    function Form() {
+      // 4) Crie e coloque hooks useRef nos três elementos criados.
+      const valorReaisRef = React.useRef()
+      const cotacaoDolarRef = React.useRef()
+      const resultadoRef = React.useRef()
+
+      // 5) Escreva uma única função handleChange para interceptar a mundança 
+      // nos dois inputs e atualizar variáveis quando o respectivo valor mudar.
+      function handleChange(value) {
+        const valorReais = Number(valorReaisRef.current.value)
+        const cotacaoDolar = Number(cotacaoDolarRef.current.value)
+
+        const valorConvertido = valorReais / cotacaoDolar
+
+        // 6) Usando as variáveis que foram atualizadas em handleChange, 
+        // exiba na div de resultado o valor convertido.
+        resultadoRef.current.textContent = valorConvertido.toLocaleString(
+          'en-US',    // Faz a formatação para a língua e país indicados. Port. bras.: pt-BR
+          {
+            style: 'currency',   // Formata como moeda
+            currency: 'USD'      // Usa o símbolo de dólar americano ($). Real brasileiro: BRL
+          }
+        )
+      }
+
+      return <>
+        <h1>Conversor de moedas</h1>
+        <form>
+          { /* 1) Crie um formulário e coloque nele um input numérico com o label "Valor em reais". */ }
+          <div>
+            <label>
+              <span>Valor em reais</span><br />
+              <input type="number" ref={valorReaisRef} onChange={handleChange} />
+            </label>
+          </div>
+          { /* 2) Coloque outro input numérico com o label "Cotação do dólar". */ }
+          <div>
+            <label>
+              <span>Cotação do dólar</span><br />
+              <input type="number" ref={cotacaoDolarRef} onChange={handleChange} />
+            </label>
+          </div>
+          { /* 3) Coloque, também, uma div para exibir o resultado da conversão de moeda. */ }
+          <div ref={resultadoRef}></div>
+        </form>
+      </>
+    }
+
+    const root = ReactDOM.createRoot(document.getElementById('root'))
+    root.render(<Form />)
 
   </script>
   
