--- a/react-basico/11-exercicio2.html
+++ b/react-basico/11-exercicio2.html
@@ -22,61 +22,57 @@
 
 		<script type="text/babel">
 			function Form() {
-				let valor, cotacao;
+				let valor, cotacao
 
-				// 4) Crie e coloque hooks useRef nos três elementos criados.
-				//criando referencias para os elementos
-				const valorRef = React.useRef();
-				const cotacaoRef = React.useRef();
-				const resultadoRef = React.useRef();
-				/*
-      5) Escreva uma única função handleChange para interceptar a mundança nos dois inputs
-      e atualizar variáveis quando o respectivo valor mudar.
-      */
+				const valorRef = React.useRef()
+				const cotacaoRef = React.useRef()
+				const resultadoRef = React.useRef()
+				
 				function handleChange(event) {
-					valor = valorRef.current.value;
-					cotacao = cotacaoRef.current.value;
+					valor = valorRef.current.value
+					cotacao = cotacaoRef.current.value
 
 					resultadoRef.current.textContent = `Valor do resultado é : ${
 						valor / cotacao
-					} USD`;
+					} USD`
 				}
-				return (
-					<>
-						/* 1 Crie um formulário e coloque nele um input numérico com o label
-						"Valor em reais". */
-						<h1>Formulario React - cotação dolar</h1>
-						<form>
-							<div>
-								<label>
-									<span>Valor em reais: </span>
-									<br />
-									<input ref={valorRef} onChange={handleChange} />
-								</label>
-							</div>
-							/* 2 Coloque outro input numérico com o label "Cotação do dólar".
-							*/
-							<div>
-								<label>
-									<span>Cotação em dolar: </span>
-									<br />
-									<input ref={cotacaoRef} onChange={handleChange} />
-								</label>
-							</div>
-							<br />
-							// 3 Coloque, também, uma div para exibir o resultado da conversão
-							de moeda.
-							<div ref={resultadoRef}></div>
-						</form>
-					</>
-				);
-				/*
-      6) Usando as variáveis que foram atualizadas em handleChange, exiba na div de resultado
-      o valor convertido.
-      */
+				return <>
+					<h1>Formulario React - cotação dolar</h1>
+					<form>
+						<div>
+							<label>
+								<span>Valor em reais: </span>
+								<br />
+								<input ref={valorRef} onChange={handleChange} />
+							</label>
+						</div>
+						<div>
+							<label>
+								<span>Cotação em dolar: </span>
+								<br />
+								<input ref={cotacaoRef} onChange={handleChange} />
+							</label>
+						</div>
+						<br />
+						<div ref={resultadoRef}></div>
+					</form>
+				</>
 			}
-			const root = ReactDOM.createRoot(document.getElementById('root'));
-			root.render(<Form />);
+			const root = ReactDOM.createRoot(document.getElementById('root'))
+			root.render(<Form />)
+			/* 
+			1) Crie um formulário e coloque nele um input numérico com o label "Valor em reais". 
+			2) Coloque outro input numérico com o label "Cotação do dólar".
+			3) Coloque, também, uma div para exibir o resultado da conversão de moeda.
+			4) Crie e coloque hooks useRef nos três elementos criados.
+			5) Escreva uma única função handleChange para interceptar a mundança nos dois inputs
+      		e atualizar variáveis quando o respectivo valor mudar.
+			6) Usando as variáveis que foram atualizadas em handleChange, exiba na div de resultado
+      		o valor convertido.
+			*/ 
+
+
+
 		</script>
 	</body>
 </html>
