--- a/react-basico/09-form-html-js usando ID.html
+++ b/react-basico/09-form-html-js usando ID.html
@@ -57,11 +57,12 @@
         //handleChange() será chamada
         document.getElementById('campo-nome').addEventListener('keyup', handleChange)
 
-        //Quando a caixa de verificação for cliacada também será chamada a função handleChange()
+        //Quando a caixa de verificação for clicada também será chamada a função handleChange()
         document.getElementById('maiusc').addEventListener('click', handleChange)
 
         //Quando o formulário for enviado (por meio do clique no botão), será chamada a função handleSubmit()
         document.querySelector('form').addEventListener('submit', handleSubmit)
+        
     </script>
 
 
