--- a/react-basico/12-form-react2 usando UsesState.html
+++ b/react-basico/12-form-react2 usando UsesState.html
@@ -85,6 +85,9 @@
         /*COPIAR ESTA PARTE*/
         const root = ReactDOM.createRoot(document.getElementById('root'))
         root.render(<Form />)
+
+        //ou 
+        //ReactDOM.createRoot(document.getElementById("root")).render(<Form />);
         /*ATÉ AQUI*/
 
 
