--- a/react-basico/08-estilizacao.html
+++ b/react-basico/08-estilizacao.html
@@ -18,12 +18,15 @@
 
     <script type="text/babel">
         /*
-        Para especificar estilos em um compnenete React, é necessário atentar-se para as seguintes regras:
+        Para especificar estilos em um compnenete React, é necessário atentar-se para as seguintes 
+        regras:
         1) O nome das propriedades nao pode ter hífen; deve-se usar a convenção
-        camelCase em vez disso. P. Ex.:, background-color dee ser escrito como backgroundColor.
-        2)Todos os valores de propriedades que não forem numéricos devem ser informados entre aspas. Ex.: 300px~> '300px'
+        camelCase em vez disso. P. Ex.:, background-color deve ser escrito como backgroundColor.
+        2)Todos os valores de propriedades que não forem numéricos devem ser informados entre aspas. 
+        Ex.: 300px~> '300px'
         3)As diferenes propriedades são separadas por VÍRGULA (e não por ponto-e-virvula, como em CSS)
-        4)Algumas propriedades são renomeadas em JSX porque seu nome em CSS corresponde a uma palavra reservada da linguagem JavasCript. 
+        4)Algumas propriedades são renomeadas em JSX porque seu nome em CSS corresponde a uma palavra 
+        reservada da linguagem JavasCript. 
         Por exemplo, 'class', se torna 'className' e 'for' se torna 'htmlFor'
         */
 
@@ -40,12 +43,15 @@
         const estilo1 = {
             backgroundColor: 'orange',
             fontSize: '30px',
-            fontFamily: "'Courier New', monospace",//se o nome da fonte tem mais de duas palavras eu tenho que por ''.
+            //se o nome da fonte tem mais de duas palavras eu tenho que por ''.
+            fontFamily: "'Courier New', monospace",
             border: '4px dotted blue'
         }
         /*
-         A seguir, um componente de caixa altamente personalizado. Recebe tanto props personalizadas (style e size) quando props genéricas (...props). 
-         Além disso, provê um valor padrão para a prop size casoo valor desta não tenha sido especificado.
+         A seguir, um componente de caixa altamente personalizado. 
+         Recebe tanto props personalizadas (style e size) quando props genéricas (...props). 
+         Além disso, provê um valor padrão para a prop size caso o valor desta não tenha sido 
+         especificado.
         */
 
         const BoxItalic = ({ style, size = 'small', ...props }) =>
@@ -54,6 +60,7 @@
                 style={{ fontStyle: 'italic', ...style }}
                 {...props}
             />
+            
         const container = <>
             {/*chamou a função*/}
             <BoxItalic
