--- a/react-basico/05-props-componente prop GENERICA e personalizada.html
+++ b/react-basico/05-props-componente prop GENERICA e personalizada.html
@@ -36,6 +36,7 @@
         Uma função de componente React pode receber dois tipos de props:
         1-> Props GENÉRICAS: são passadas por meio de um único objeto, e
         normalemnte são aplicadas ao componente por meio de espalhamento
+
         2->Props PERSONALIZADAS: são passadas nominalmente à função.
         */
 
@@ -43,22 +44,30 @@
         // function Mensagem(props) {
         //     return <div className="msg" {...props} />
         // }
-        //è comum que funções de ocmponentes mais simples sejam escritas 
+        //è comum que funções de componentes mais simples sejam escritas 
+
+
+        //PROP GENÉRICA
+        //props é o parâmetro aqui
         const Mensagem = props => <div className="msg" {...props} />
         
-        //PROP PERSONALIZADA Função de componente que recebe apenas propspersonalizadas
+        //PROP PERSONALIZADA 
+        //id e children são os parâmetros aqui
         const Aviso = ({id, children}) => <div className="msg" id={id}>{children}</div>
 
         /*se não tem chave, é GENÉRICA*, então se usa o espalhamento*/
         const container = <>
+            {/*USO DE PROPS GENÉRICA*/}
             <Mensagem id="msg1" title="Primeira mensagem" children="Cuidado com a escada" legume="batata" />
-            <Mensagem id="msg2" tile="Segunda Mensagem">Tem café na copa</Mensagem>
+            {/*USO DE PROPS GENÉRICA*/}
+            <Mensagem id="msg2" title="Segunda Mensagem">Tem café na copa</Mensagem>
+            {/*USO DE PROPS PERSONALIZADA*/}
             <Aviso id="aviso" title="Primeiro aviso" verdura="alface">Jogo do tigrinho é golpe!"</Aviso>
         </>
 
 
-         /*COPIAR ESTA PARTE*/
-         const root = ReactDOM.createRoot(document.getElementById('root'))
+        /*COPIAR ESTA PARTE*/
+        const root = ReactDOM.createRoot(document.getElementById('root'))
         root.render(container)
         /*ATÉ AQUI*/
 
