--- a/react-basico/07-EXERCICIO1.html
+++ b/react-basico/07-EXERCICIO1.html
@@ -4,16 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercicio 1</title>
-  <style>
-    .cor1 {
-        color: red;
-    }
-    .cor2 {
-        color: blue;
-    }
-    </style>
-  </head>
+  <title>Document</title>
+	<style>
+		/*
+			1) Crie dois estilos CSS, um que coloque o texto em uma cor
+		   e outro que coloque o texto em outra cor.
+		*/
+		.azul {
+			color: blue;
+		}
+		.rosa {
+			color: deeppink;
+		}
+	</style>
+</head>
 <body>
 
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
@@ -23,53 +27,49 @@
   <div id="root"></div>
 
   <script type="text/babel">
-   // Componente que recebe props personalizadas
-    const Componente = ({nome, sobrenome, dia, mes, ano}) => {
-        // Calcula a idade com base no ano de nascimento
-        const idade = 2024 - ano;
-
-        // Retorna o JSX com dois parágrafos e uma div
-        return (
-            <>
-                <p className="cor1">{nome} {sobrenome}</p>
-                <p className="cor2">{dia}/{mes}/{ano}</p>
-                <div>Idade em 2024: {idade}</div>
-            </>
-        );
-    };
-    
-    // Conteúdo a ser renderizado
-    const container = (
-        <>
-            <Componente nome="João" sobrenome="Silva" dia="01" mes="01" ano="2000"/>
-            <Componente nome="Maria" sobrenome="Santos" dia="15" mes="05" ano="1990"/>
-        </>
-    );
-
-    // Renderiza o container na div root
-    const root = ReactDOM.createRoot(document.getElementById('root'));
-    root.render(container);
-
     /*
       EXERCÍCIO DE FIXAÇÃO nº 1
 
-		1) Crie dois estilos CSS, um que coloque o texto em uma cor
-		   e outro que coloque o texto em outra cor.
 		2) Declare uma função de componente que receba as seguintes
 		   props personalizadas: nome, sobrenome, dia, mes e ano.
-		3) Na função de componente, coloque um fragment e, dentro dele,
-		  dois parágrafos: no primeiro, deve ser aplicada a classe que
-		  deixa a cor do texto em uma cor e, no outro, a classe que deixa
-		  a cor na outra cor.
-		4) No primeiro parágrafo, deve ser exibido o nome completo, composto
-		  por nome e sobrenome.
-		5) No segundo parágrafo, deve ser exibida a data de nascimento, 
-		  composta pelo dia, pelo mês e pelo ano, separados por /.
-		6) No componente, crie, ainda, uma div. Dentro dela, deve ser exibida
-		  a idade que a pessoa terá ao final do ano, calculada por meio de
-		  um cálculo simples (2024 menos o ano de nascimento informado).
-		7) Faça os comentários que julgar necessários no código.
-      */
+
+		*/
+		function Pessoa({nome, sobrenome, dia, mes, ano}) {
+			/*
+				3) Na função de componente, coloque um fragment e, dentro dele,
+					dois parágrafos: no primeiro, deve ser aplicada a classe que
+					deixa a cor do texto em uma cor e, no outro, a classe que deixa
+					a cor na outra cor.
+			*/
+			return <>
+				{ /*  
+					4) No primeiro parágrafo, deve ser exibido o nome completo, composto
+		         por nome e sobrenome.
+				*/ }
+				<p className="azul">{nome} {sobrenome}</p>
+
+				{ /* 
+					5) No segundo parágrafo, deve ser exibida a data de nascimento, 
+				     composta pelo dia, pelo mês e pelo ano, separados por /.
+				*/}
+				<p className="rosa">{dia}/{mes}/{ano}</p>
+
+				{ /* 
+					6) No componente, crie, ainda, uma div. Dentro dela, deve ser exibida
+		         a idade que a pessoa terá ao final do ano, calculada por meio de
+		         um cálculo simples (2024 menos o ano de nascimento informado).
+				*/ }
+				<div>Idade: {2024 - ano}</div>
+			</>
+		}
+
+		const container = <>
+			<Pessoa nome="Tonho" sobrenome="Torresmo" dia="27" mes="04" ano={1964} />
+		</>
+
+		const root = ReactDOM.createRoot(document.getElementById('root'))
+		root.render(container)
+
   </script>
   
 </body>
