--- a/react-basico/11-EXERCICIO2.html
+++ b/react-basico/11-EXERCICIO2.html
@@ -4,57 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conversor de Moeda</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    .container {
-      background-color: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      max-width: 300px;
-      width: 100%;
-      text-align: center;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 10px;
-      font-size: 16px;
-      color: #333;
-    }
-
-    input {
-      width: calc(100% - 10px);
-      padding: 8px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
-    }
-
-    div {
-      font-size: 18px;
-      font-weight: bold;
-      color: #007BFF;
-      margin-top: 15px;
-    }
-
-    input:focus {
-      outline: none;
-      border-color: #007BFF;
-    }
-
-  </style>
+  <title>Document</title>
 </head>
 <body>
 
@@ -66,35 +16,56 @@
 
   <script type="text/babel">
 
-    function Conversor() {
-      const valorEmReaisRef = React.useRef(null);
-      const cotacaoDolarRef = React.useRef(null);
-      const resultadoRef = React.useRef(null);
+    function Form() {
+      // 4) Crie e coloque hooks useRef nos três elementos criados.
+      const valorReaisRef = React.useRef()
+      const cotacaoDolarRef = React.useRef()
+      const resultadoRef = React.useRef()
 
-      const handleChange = () => {
-        const valorEmReais = parseFloat(valorEmReaisRef.current.value) || 0;
-        const cotacaoDolar = parseFloat(cotacaoDolarRef.current.value) || 1;
-        const resultado = valorEmReais / cotacaoDolar;
+      // 5) Escreva uma única função handleChange para interceptar a mundança 
+      // nos dois inputs e atualizar variáveis quando o respectivo valor mudar.
+      function handleChange(value) {
+        const valorReais = Number(valorReaisRef.current.value)
+        const cotacaoDolar = Number(cotacaoDolarRef.current.value)
 
-        resultadoRef.current.innerText = `Valor em dólares: $${resultado.toFixed(2)}`;
-      };
+        const valorConvertido = valorReais / cotacaoDolar
 
-      return (
-        <div className="container">
-          <label>
-            Valor em reais:
-            <input type="number" ref={valorEmReaisRef} onChange={handleChange} placeholder="Digite o valor em reais" />
-          </label>
-          <label>
-            Cotação do dólar:
-            <input type="number" ref={cotacaoDolarRef} onChange={handleChange} placeholder="Digite a cotação do dólar" />
-          </label>
-          <div ref={resultadoRef}>Valor em dólares: $0.00</div>
-        </div>
-      );
+        // 6) Usando as variáveis que foram atualizadas em handleChange, 
+        // exiba na div de resultado o valor convertido.
+        resultadoRef.current.textContent = valorConvertido.toLocaleString(
+          'en-US',    // Faz a formatação para a língua e país indicados. Port. bras.: pt-BR
+          {
+            style: 'currency',   // Formata como moeda
+            currency: 'USD'      // Usa o símbolo de dólar americano ($). Real brasileiro: BRL
+          }
+        )
+      }
+
+      return <>
+        <h1>Conversor de moedas</h1>
+        <form>
+          { /* 1) Crie um formulário e coloque nele um input numérico com o label "Valor em reais". */ }
+          <div>
+            <label>
+              <span>Valor em reais</span><br />
+              <input type="number" ref={valorReaisRef} onChange={handleChange} />
+            </label>
+          </div>
+          { /* 2) Coloque outro input numérico com o label "Cotação do dólar". */ }
+          <div>
+            <label>
+              <span>Cotação do dólar</span><br />
+              <input type="number" ref={cotacaoDolarRef} onChange={handleChange} />
+            </label>
+          </div>
+          { /* 3) Coloque, também, uma div para exibir o resultado da conversão de moeda. */ }
+          <div ref={resultadoRef}></div>
+        </form>
+      </>
     }
 
-    ReactDOM.createRoot(document.getElementById('root')).render(<Conversor />);
+    const root = ReactDOM.createRoot(document.getElementById('root'))
+    root.render(<Form />)
 
   </script>
   
